# osqp-cpp

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: osqp++.h
src/: osqp++.cc
test/: osqp++_test.cc
